--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ FLASK_ENV=production
 SECRET_KEY=Sideralmcc3432.
 
 # Configuración de la base de datos MySQL
-MYSQL_USER=appuser
+MYSQL_USER=root
 MYSQL_PASSWORD=1436Mcc.
 MYSQL_DB=sistema_gestion_mantenimiento
 MYSQL_HOST=db
